src/test/ui/suggestions/issue-61226.rs
struct X {}
fn f() {
    vec![X]; //…
    //~^ ERROR expected value, found struct `X`
}
